kubernetes/devops-demo/demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  namespace: demo-app
  labels:
    app: demo
spec:
  replicas: 4
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo-app
        image: ncorplab/egt:latest
        ports:
        - containerPort: 3000
