kubernetes/devops-demo/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo-app
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
