kubernetes/devops-demo/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo-app
  annotations:
          nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devops-demo.tick42.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-service
            port:
              number: 3000
  ingressClassName: nginx
