kubernetes/devops-demo/deploy-all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  namespace: demo-app
  labels:
    app: demo
  annotations:
      keel.sh/policy: force
      keel.sh/match-tag: "true"
      keel.sh/trigger: poll      
      keel.sh/pollSchedule: "@every 1m"  
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo-app
        image: ncorplab/telerikdemo:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo-app
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo-app
  annotations:
          nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devops-demo.tick42.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-service
            port:
              number: 3000
  ingressClassName: nginx
